<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Campo de Usuario -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:autofillHints="username"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:maxWidth="488dp"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:padding="10dp" />

    <!-- Campo de Contraseña -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:autofillHints="password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxWidth="488dp"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:padding="10dp" />

    <!-- Botón -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple_500"
        android:maxWidth="320dp"
        android:padding="10dp"
        android:text="@string/login_button_text"
        android:textColor="@android:color/white" />


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/ic_logo" />



</LinearLayout>
